# Basic_Rasterizer

./: .gitignore  CL.bat  CMakeLists.txt  README.md  Renderer.hpp  Shader.hpp  ao.tga  depth.tga  geometry.cpp  geometry.h  geometry_a.h  main.cpp  model.cpp  model.h  my_math_helper.hpp  occlusion.tga  our_GL.cpp  our_GL.hpp  output.tga  tgaimage.cpp  tgaimage.h
